projects/vb6parse/snapshots/parsers/cst/library/environment/error_statement/error_at_module_level.snap
---
source: projects/vb6parse/tests/library/environment/error_statement.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: ErrorStatement
      children:
        - kind: ErrorKeyword
          text: Error
        - kind: Whitespace
          text: " "
        - kind: NumericLiteralExpression
          children:
            - kind: IntegerLiteral
              text: "53"
    - kind: Newline
      text: "\n"
