projects/vb6parse/snapshots/parsers/cst/library/environment/error_statement/error_in_select_case.snap
---
source: projects/vb6parse/tests/library/environment/error_statement.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SelectCaseStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SelectKeyword
                  text: Select
                - kind: Whitespace
                  text: " "
                - kind: CaseKeyword
                  text: Case
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: errorType
                - kind: Newline
                  text: "\n"
                - kind: Whitespace
                  text: "        "
                - kind: CaseClause
                  children:
                    - kind: CaseKeyword
                      text: Case
                    - kind: Whitespace
                      text: " "
                    - kind: IntegerLiteral
                      text: "1"
                    - kind: Newline
                      text: "\n"
                    - kind: StatementList
                      children:
                        - kind: ErrorStatement
                          children:
                            - kind: Whitespace
                              text: "            "
                            - kind: ErrorKeyword
                              text: Error
                            - kind: Whitespace
                              text: " "
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "11"
                        - kind: Newline
                          text: "\n"
                        - kind: Whitespace
                          text: "        "
                - kind: CaseClause
                  children:
                    - kind: CaseKeyword
                      text: Case
                    - kind: Whitespace
                      text: " "
                    - kind: IntegerLiteral
                      text: "2"
                    - kind: Newline
                      text: "\n"
                    - kind: StatementList
                      children:
                        - kind: ErrorStatement
                          children:
                            - kind: Whitespace
                              text: "            "
                            - kind: ErrorKeyword
                              text: Error
                            - kind: Whitespace
                              text: " "
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "13"
                        - kind: Newline
                          text: "\n"
                        - kind: Whitespace
                          text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: SelectKeyword
                  text: Select
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
