projects/vb6parse/snapshots/parsers/cst/library/environment/error_statement/error_preserves_whitespace.snap
---
source: projects/vb6parse/tests/library/environment/error_statement.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: ErrorStatement
      children:
        - kind: ErrorKeyword
          text: Error
        - kind: Whitespace
          text: "    "
        - kind: NumericLiteralExpression
          children:
            - kind: IntegerLiteral
              text: "11"
    - kind: Whitespace
      text: "    "
    - kind: Newline
      text: "\n"
